don't use Set.of; it's not there in Java8